--- a/teste.html
+++ b/teste.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    testando
+    testando3
 </body>
+    
 </html>
