--- a/teste.html
+++ b/teste.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="escuro">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    testando 6
+    <p>testando 6.1</p>
 </body>
     
 </html>
