--- a/teste.html
+++ b/teste.html
@@ -6,10 +6,14 @@
     <title>teste</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="main.js"></script> 
 </head>
 <body>
-    <p>testando 6.1</p>
+    <p>testando 6.10   
+        <br>
+        <img src="i1.png" />
+
+
+    </p> 
 </body>
-    
 </html>
